--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,1 @@
-<div class="nav">
-  <h1>Sam Stone. Developer.</h1>
-  <nav>
-    <a [routerLink]="['/about']">About</a>
-    <a [routerLink]="['/contact']">Contact</a>
-    <a [routerLink]="['/projects']">Projects</a>
-  </nav>
-</div>
-
-<router-outlet />
+<app-core class="app-core"/>
