--- a/src/styles.css
+++ b/src/styles.css
@@ -1,23 +1,15 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Radio+Canada:ital,wght@0,300..700;1,300..700&family=Unbounded:wght@200..900&display=swap');
 
 * {
     padding: 0;
     margin: 0;
+    font-family: "Hammersmith One", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
-app-root {
-    display: flex;
-    flex-direction: row;
-    height: 100vh;
-    width: 100vw;
-}
-
-.nav {
-    width: 20%;
-    background-color: grey;
-}
-
-.main {
-    width: 100%;
-    background-color: pink;
+.regular-text {
+    font-family: "Radio Canada";
 }
