basic navigation tab concept

--- a/src/app/common/nav-tab/nav-tab.component.css
+++ b/src/app/common/nav-tab/nav-tab.component.css
@@ -1,11 +1,26 @@
-.app-core--nav-tab {
+app-nav-tab {
     background-color: khaki;
-    /* writing-mode: sideways-lr;
-    text-orientation: mixed; */
-    /* height: 20%; */
-    /* flex: 1 1 0; */
-    /* width: 0; */
+
+    flex-grow: 1;
     text-align: center;
+
     font-size: xx-large;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    /* overflow: hidden;
+    position: relative; */
+}
+
+.nav-tab-a {
+    background-color: var(--primary-color);
+    display: block;
+
+    overflow: hidden;
+    position: relative;
+}
+
+.active-nav-tab {
+    position: relative;
+    z-index: 1000;
+    overflow: visible;
+    height: fit-content;
 }
