--- a/src/app/common/nav-tab/nav-tab.component.html
+++ b/src/app/common/nav-tab/nav-tab.component.html
@@ -1,3 +1,5 @@
-<div class="app-core--nav-tab">
-    <h2>{{title}}</h2>
-</div>
+<a class="nav-tab-a"[routerLink]="routerLink" [routerLinkActive]="'active-nav-tab'">
+    <div class="app-core--nav-tab">
+        <h2>{{title}}</h2>
+    </div>
+</a>
