--- a/src/app/core/core.component.css
+++ b/src/app/core/core.component.css
@@ -1,5 +1,6 @@
-.app-core {
+app-core {
     background-color: pink;
+    display: block;
     /* display: flex; */
     width: 70%;
     height: 100vh;
@@ -7,17 +8,26 @@
 }
 
 .app-core--main {
-    background-color: dodgerblue;
+    background-color: var(--primary-color);
+
+    position: relative;
+    top: 2.25em;
     width: 100%;
-    height: 95%;
-    margin: auto;
+    /* height: 100%; how to get the overlap? */
+    padding-top: 2.5em;
+    overflow: auto;
+    box-shadow: 0px -5px 5px rgb(23, 238, 173);
 }
 
 .app-core--nav-tabs {
     background-color: darksalmon;
-    width: 100%;
-    height: 5%;
+
+    position: absolute;
+    width: 70%;
+    height: 2.25em;
+    /* z-index: 100; */
     display: flex;
-    flex: 1 1 0;
-    justify-content: space-around;
+    /* overflow: hidden; */
+    /* align-items: stretch; */
+    /* justify-content: space-around; */
 }
