--- a/src/app/core/core.component.html
+++ b/src/app/core/core.component.html
@@ -1,13 +1,11 @@
-<div class="app-core">
-    <nav class="app-core--nav-tabs">
-        <app-nav-tab [title]="'About'"/>
-        <app-nav-tab [title]="'Work'"/>
-        <app-nav-tab [title]="'School'"/>
-        <app-nav-tab [title]="'Play'"/>
-        <app-nav-tab [title]="'Contact'"/>
-    </nav>
-    
-    <main class="app-core--main">
-        <router-outlet />
-    </main>
-</div>
+<nav class="app-core--nav-tabs">
+    <app-nav-tab [title]="'About'" [routerLink]="'/about'"/>
+    <app-nav-tab [title]="'Work'" [routerLink]="'/work'"/>
+    <app-nav-tab [title]="'School'" [routerLink]="'/school'"/>
+    <app-nav-tab [title]="'Play'" [routerLink]="'/play'"/>
+    <app-nav-tab [title]="'Contact'" [routerLink]="'/contact'"/>
+</nav>
+
+<main class="app-core--main">
+    <router-outlet />
+</main>
