--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Radio+Canada:ital,wght@0,300..700;1,300..700&family=Unbounded:wght@200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+:root {
+    --primary-color: rgb(255, 238, 207);
+    --secondary-color: rgb(0, 0, 0);
+}
 
 * {
     padding: 0;
     margin: 0;
-    font-family: "Hammersmith One", sans-serif;
+    font-family: "Barlow Condensed", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
