restructure code to better reflect a single page site

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<app-core class="app-core"/>
+<main class="app-core--main">
+    <app-hero/>
+    <app-projects/>
+    <app-call-to-action/>
+</main>
