theme overhaul. idk if I like it though

--- a/src/app/content/project-summary/project-summary.component.html
+++ b/src/app/content/project-summary/project-summary.component.html
@@ -3,4 +3,4 @@
 <p>{{when}}</p>
 <p>{{company}}</p>
 <p>{{description}}</p>
-<a href={{project_link}}>{{project_link}}</a>
+<a href={{project_link}}  target="_blank">{{project_link}}</a>
