--- a/src/styles.css
+++ b/src/styles.css
@@ -5,20 +5,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Saira+Extra+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Sofia+Sans+Extra+Condensed:ital,wght@0,1..1000;1,1..1000&family=Stint+Ultra+Condensed&display=swap');
 
 :root {
-    --primary-color: rgb(217, 244, 241);
-    --primary-color-transparent: rgba(255, 238, 207, 0.9);
-    --secondary-color: rgb(0, 0, 0);
-    --tab-highlight-color: rgb(236, 178, 152);
+    --primary-color: rgb(18, 16, 14);
+    --secondary-color: rgb(242, 165, 65);
+    --tertiary-color: rgb(202, 5, 77);
+    --text-color-light: rgb(255, 251, 255);
+    --text-color-dark: rgb(18, 16, 14);
 }
 
 * {
+    color: var(--text-color-light);
+
+    font-family: "Alata", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    text-decoration: none;
+    
     padding: 0;
     margin: 0;
-    font-family: "Sofia Sans Extra Condensed", sans-serif;
-    font-weight: 500;
+    min-width: 0;
+}
+
+a {
+    color: var(--tertiary-color);
     font-style: normal;
 }
 
-.regular-text {
-    font-family: "Radio Canada";
+a:active {
+    text-decoration: none;
 }
