--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,36 +1,15 @@
 app-root {
-    background-color: pink;
+    /* background-color: #073B3A; */
+
     display: block;
-    /* display: flex; */
-    width: 70%;
-    height: 100vh;
+    width: 100vw;
+}
+
+.app-root--main {
+    color: rgb(254, 252, 251);
+    background-color: rgb(18, 16, 14);
+    /* box-shadow: 10px 10px 10px #79C7C5; */
+
+    /* width: 65%; */
     margin: auto;
-}
-
-.app-core--main {
-    /* background: linear-gradient(#e66465, #9198e5); */
-    background-color: var(--primary-color);
-
-    position: relative;
-    top: 2.9em;
-    width: 100%;
-    /* height: 100%; how to get the overlap? */
-    padding-top: 2.5em;
-    overflow: auto;
-
-    /* box-shadow: 0px -5px 5px rgb(23, 238, 173); */
-    border-top: 10px double black;
-}
-
-.app-core--nav-tabs {
-    background-color: darksalmon;
-
-    position: absolute;
-    width: 70%;
-    height: 2.9em;
-    /* z-index: 100; */
-    display: flex;
-    /* overflow: hidden; */
-    /* align-items: stretch; */
-    /* justify-content: space-around; */
 }
