--- a/src/app/sections/call-to-action/call-to-action.component.html
+++ b/src/app/sections/call-to-action/call-to-action.component.html
@@ -1,1 +1,1 @@
-<p>call-to-action works!</p>
+<a href="mailto: mailto:samuelrystone@gmail.com?subject=Get In Touch&body=Hello Sam! I was SOOO impressed with your portfolio website... "><h2>Contact</h2></a>
