--- a/src/app/sections/hero/hero.component.html
+++ b/src/app/sections/hero/hero.component.html
@@ -1,3 +1,5 @@
-<h1>Sam Stone</h1>
-<p>Fullstack Software Developer</p>
-<img src="/assets/headshot.jpg">
+<div>
+    <h1>Sam Stone</h1>
+    <p>Fullstack Software Developer</p>
+    <img src="/assets/headshot.jpg">
+</div>
