--- a/src/styles.css
+++ b/src/styles.css
@@ -3,26 +3,58 @@
 @import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Radio+Canada:ital,wght@0,300..700;1,300..700&family=Unbounded:wght@200..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Saira+Extra+Condensed:wght@100;200;300;400;500;600;700;800;900&family=Sofia+Sans+Extra+Condensed:ital,wght@0,1..1000;1,1..1000&family=Stint+Ultra+Condensed&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&display=swap');
 
 :root {
     --primary-color: rgb(18, 16, 14);
-    --secondary-color: rgb(242, 165, 65);
-    --tertiary-color: rgb(202, 5, 77);
+    --secondary-color: rgb(202, 5, 77);
+    --secondary-color-10-percent: rgba(202, 5, 77, 0.1);
+    --secondary-color-50-percent: rgba(202, 5, 77, 0.7);
+    --tertiary-color: rgb(242, 165, 65);
+    --tertiary-color-10-percent: rgba(242, 165, 65, 0.1);
+    --quaternary-color: rgb(31, 211, 79);
+    --quaternary-color-10-percent: rgba(31, 211, 79, 0.1);
     --text-color-light: rgb(255, 251, 255);
+    --text-color-light-60-percent:  rgba(255, 251, 255, 0.5);
+    --text-color-light-90-percent:  rgba(255, 251, 255, 0.8);
     --text-color-dark: rgb(18, 16, 14);
+
+    --main-content-width: 80%;
 }
 
 * {
     color: var(--text-color-light);
 
-    font-family: "Alata", sans-serif;
-    font-weight: 300;
+    font-family: "Roboto Slab", sans-serif;
+    font-weight: 500;
     font-style: normal;
     text-decoration: none;
     
     padding: 0;
     margin: 0;
     min-width: 0;
+}
+
+h1 {
+    font-size: 7em;
+}
+
+h2 {
+    font-size: 3.5em;
+}
+
+h3 {
+    font-size: 2.5em;
+}
+
+h4 {
+    font-size: 1.25em;
+}
+
+p {
+    font-size: 1.25em;
+    font-family: 'Roboto Slab', serif;
+    font-weight: 300;
 }
 
 a {
