--- a/src/app/sections/hero/hero.component.html
+++ b/src/app/sections/hero/hero.component.html
@@ -1,5 +1,15 @@
 <div>
-    <h1>Sam Stone</h1>
-    <p>Fullstack Software Developer</p>
-    <img src="/assets/headshot.jpg">
+    <div class="app-hero--left">
+        <h1 class="app-hero--title">Stone.</h1>
+        <h1 class="app-hero--title">Sam Stone.</h1>
+        <p class="app-hero--about">Fullstack Software Developer</p>
+    </div>
+    <div class="app-hero--right">
+        <div class="app-hero--decorative-block app-hero--decorative-block-1"></div>
+        <div class="app-hero--decorative-block app-hero--decorative-block-2">
+            <!-- <img class="app-hero--headshot" src="/assets/headshot.jpg"> -->
+        </div>
+        <div class="app-hero--decorative-block app-hero--decorative-block-3"></div>
+        <div class="app-hero--decorative-block app-hero--decorative-block-4"></div>
+    </div>
 </div>
