--- a/src/app/sections/projects/projects.component.html
+++ b/src/app/sections/projects/projects.component.html
@@ -1,37 +1,11 @@
 <h2>Projects Highlights</h2>
 
 <app-project-summary
-    [title]="'Online Ordering'"
-    [company]="'Little Caesars'"
-    [when]="'May 2023 - Present'"
-    [skills]="['C#', '.NET', 'ASP.NET', 'SQL Server', 'MongoDB']"
-    [project_link]="'https://littlecaesars.com'"
-    [description]="'Known internally as Onlo, this is the backend for the Little Caesars online ordering platform which has become a core part of the business over the years. Onlo encomposes many individual projects of varying sizes from monolithic legacy servers to modern microservice-oriented architecture. At Little Caesars, I have handled code regarding customer accounts, payment processing, and store/cloud communication. I have maintained the existing codebase, implemented new functionality for existing APIs, created new APIs based on the REST standard, solved annoying bugs, and written unit tests with frameworks like xUnit.'"
-/>
-
-<app-project-summary
-    [title]="'SAIO'"
-    [company]="'Eastern Michigan University'"
-    [when]="'September 2023 - December 2023'"
-    [skills]="['JavaScript', 'React', 'HTML', 'CSS', 'Python', 'FastAPI', 'MongoDB']"
-    [project_link]="'https://github.com/COSC481W-2023Fall/SAIO'"
-    [description]="'An all-in-one web application designed to allow students to succeed in school by providing everything in one place. Contains calendar, to-do, flashcard, and notebook “applets” and boasts an interactive and customizable user interface. As team leader, directed the  of the project\'s goals and architecture, coordinated meetings, and organized the project backlog. In addition to leadership responsibilities, I developed full stack features like the Notebook applet and the dynamic web interface.'"
-/>
-
-<app-project-summary
-    [title]="'SamS\'s Musket Mod'"
-    [company]="'Self-Driven'"
-    [when]="'January 2024 - March 2024'"
-    [skills]="['Java']"
-    [project_link]="'https://www.curseforge.com/members/sams/projects'"
-    [description]="'A personal project made for a favorite pastime. Interacted with the Gradle build system and reverse-engineered a large code base with little available documentation. Used advanced techniques like reflection and multithreading and interacted with complex inheritance hierarchies to complete the project in a reasonable time frame.'"
-/>
-
-<app-project-summary
-    [title]="'Stock Breaker'"
-    [company]="'EMU Game Developer Guild'"
-    [when]="'September 2023- December 2023'"
-    [skills]="['C#','Unity']"
-    [project_link]="'N/A'"
-    [description]="'Top-down brawler video game with a kid\'s drawing art style created as part of the EMU Game Developer Guild. Coded scripts for character control, enemy AI, and boss AI, collaborated with team members across teams and of varying experience to commit new features, and contributed to the game\'s design and direction.'"
+    *ngFor="let project of projects; let i as index"
+    [title]="project.title"
+    [company]="project.company"
+    [when]="project.when"
+    [skills]="project.skills"
+    [project_link]="project.link"
+    [description]="project.description"
 />
