--- a/src/app/sections/hero/hero.component.html
+++ b/src/app/sections/hero/hero.component.html
@@ -11,5 +11,6 @@
         </div>
         <div class="app-hero--decorative-block app-hero--decorative-block-3"></div>
         <div class="app-hero--decorative-block app-hero--decorative-block-4"></div>
+        <div class="app-hero--decorative-block app-hero--decorative-block-5"></div>
     </div>
 </div>
