--- a/src/app/sections/hero/hero.component.html
+++ b/src/app/sections/hero/hero.component.html
@@ -1,8 +1,8 @@
 <div>
     <div class="app-hero--left">
         <h1 class="app-hero--title">Stone.</h1>
-        <h1 class="app-hero--title">Sam Stone.</h1>
-        <p class="app-hero--about">Fullstack Software Developer</p>
+        <h1 class="app-hero--title"><span class="app-hero--title--emphasis">Sam</span> Stone.</h1>
+        <p class="app-hero--about">Welcome! I'm Sam, a fullstack software developer with a passion for web and game development. Please take a look around!</p>
     </div>
     <div class="app-hero--right">
         <div class="app-hero--decorative-block app-hero--decorative-block-1"></div>
