edu, work sections + server.js

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <main class="app-root--main">
     <app-hero/>
+    <app-work-experience/>
+    <app-education/>
     <app-projects/>
     <app-call-to-action/>
 </main>
