small changes to format. waiting for inspiration to hit!

--- a/assets/styles/work-experience.css
+++ b/assets/styles/work-experience.css
@@ -10,3 +10,16 @@
     width: var(--main-content-width);
     margin: auto;
 }
+
+.app-work-experience--summaries {
+    display: flex;
+    gap: 32px;
+}
+
+.app-work-experience--summaries--summary {
+
+}
+
+.app-work-experience--summaries--summary--header {
+    display: flex;
+}
