--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -10,6 +10,7 @@
     --secondary-color: rgb(202, 5, 77);
     --secondary-color-20-percent: rgba(202, 5, 77, 0.2);
     --secondary-color-40-percent: rgba(202, 5, 77, 0.4);
+    --secondary-color-80-percent: rgba(202, 5, 77, 0.8);
     --tertiary-color: rgb(242, 165, 65);
     --tertiary-color-20-percent: rgba(242, 165, 65, 0.2);
     --tertiary-color-40-percent: rgba(242, 165, 65, 0.4);
