--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -10,6 +10,7 @@
     --secondary-color: rgb(202, 5, 77);
     --secondary-color-20-percent: rgba(202, 5, 77, 0.2);
     --secondary-color-40-percent: rgba(202, 5, 77, 0.4);
+    --secondary-color-60-percent: rgba(202, 5, 77, 0.6);
     --secondary-color-80-percent: rgba(202, 5, 77, 0.8);
     --tertiary-color: rgb(242, 165, 65);
     --tertiary-color-20-percent: rgba(242, 165, 65, 0.2);
@@ -17,6 +18,7 @@
     --quaternary-color: rgb(31, 211, 79);
     --quaternary-color-20-percent: rgba(31, 211, 79, 0.2);
     --quaternary-color-40-percent: rgba(31, 211, 79, 0.4);
+    --quaternary-color-60-percent: rgba(31, 211, 79, 0.6);
 
     --text-color-light: rgb(255, 251, 255);
     --text-color-light-60-percent:  rgba(255, 251, 255, 0.5);
