--- a/assets/styles/hero.css
+++ b/assets/styles/hero.css
@@ -15,7 +15,10 @@
 
 .app-hero--left {
     width: 60%;
-    padding-top: 8em;
+    padding-top: 4em;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center */
     /* vertical-align: center; */
 }
 
@@ -43,10 +46,6 @@
     /* margin: auto; */
 }
 
-.app-hero--headshot {
-    width: 250px;
-}
-
 .app-hero--decorative-block {
     position: absolute;
 }
@@ -55,9 +54,10 @@
     background-color: var(--primary-color);
     border-radius: 25px;
 
-    width: 70em;
-    height: 70em;
-    top: -40em;
+    width: 50vw;
+    height: 75vh;
+    top: -10vh;
+    right: -10vw
 }
 
 .app-hero--decorative-block-2 {
@@ -67,10 +67,10 @@
         10px 10px 25px var(--quaternary-color-40-percent),
         -10px -10px 25px var(--tertiary-color-40-percent);
 
-    width: 25em;
-    height: 12em;
-    top: 380px;
-    transform: translateX(-8em);
+    width: 25vw;
+    height: 25vh;
+    top: 50vh;
+    transform: translateX(-8vw);
 }
 
 .app-hero--decorative-block-3 {
@@ -80,10 +80,10 @@
         10px 10px 25px var(--quaternary-color-40-percent),
         -10px -10px 25px var(--secondary-color-40-percent);
 
-    width: 8em;
-    height: 8em;
-    top: 50px;
-    transform: translateX(4.5em);
+    width: 10vw;
+    height: 10vw;
+    top: 8vh;
+    transform: translateX(5vw);
 }
 
 .app-hero--decorative-block-4 {
@@ -93,10 +93,10 @@
         10px 10px 25px var(--secondary-color-40-percent),
         -10px -10px 25px var(--tertiary-color-40-percent);
 
-    width: 40em;
-    height: 24.5em;
-    top: calc(50px + 8em); /* Distance from from top of page to bottom of dec block 3 */
-    transform: translateX(20em);
+    width: 40vw;
+    height: 50vh;
+    top: calc(21.5vh); /* Distance from from top of page to bottom of dec block 3 */
+    transform: translateX(25vw);
 }
 
 .app-hero--decorative-block-5 {
@@ -108,6 +108,6 @@
 
     width: 8em;
     height: 8em;
-    top: 220px;
-    transform: translateX(23em);
+    top: 30vh;
+    transform: translateX(30vw);
 }
